@@ -1,0 +1,12 @@
+% font definition
+\documentclass{article}
+\usepackage[dvips]{color}
+\begin{document}
+first page.
+\newpage
+\textbf{second page.}
+\newpage
+\textit{third page.}
+\newpage
+\textsl{fourth page.}
+\end{document}
